[gd_scene load_steps=2 format=3 uid="uid://yagejx3kompr"]

[ext_resource type="Script" path="res://scenes/desafio_modal.gd" id="1_r5t0l"]

[node name="DesafioModal" type="Window"]
transparent_bg = true
title = "Teste"
initial_position = 1
size = Vector2i(500, 250)
exclusive = true
unresizable = true
always_on_top = true
content_scale_mode = 1
script = ExtResource("1_r5t0l")

[node name="Nickname_Edit" type="LineEdit" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 91.0
grow_horizontal = 2
size_flags_horizontal = 3
placeholder_text = "Digite o nick do desafiado"
alignment = 1

[node name="DesafiarButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 25.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "Desafiar Pessoa"

[node name="Status_label" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 38.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="button_down" from="DesafiarButton" to="." method="_on_desafiar_button_button_down"]
